updated swagger url's
