# docs/swagger.json
@@ -331,7 +331,12 @@
             }
         },
         "/story-feedback": {
-            "get": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create story feedback",
                 "consumes": [
                     "application/json"
@@ -387,7 +392,12 @@
             }
         },
         "/tc": {
-            "get": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create TC",
                 "consumes": [
                     "application/json"
@@ -401,12 +411,12 @@
                 "summary": "Create TC",
                 "parameters": [
                     {
-                        "description": "Accepted",
-                        "name": "accepted",
+                        "description": "Email request",
+                        "name": "emailRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/model.EmailRequest"
                         }
                     }
                 ],
